Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40920

Closing widget's parent which has QQuickView embedded crashes when WA_DeleteOnClose is used

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.0
    • 5.3.1
    • Quick: Widget
    • None
    • windows 7 and Ubuntu 14.04
    • 657766f19b31d83f361fd3c9ad717b207e1dff8c, 22b7fd1c0b93f12585858ac5baabba32408749fd

    Description

      Steps to reproduce
      1) Run attached sample.
      2) Click "CreateSubWindowOnWidget”to create child window.
      3) Click "CreateSubMainWindow”to create grandchild window.
      4) Move grandchild window and click window close button on child window (created by step 2)

      As a resul:
      Application will be crashed.

      FYI:

      • It can not reproduce if QMainWindow subclass don't have embedded QQuickView.
      • It can not reproduce if QQuickWindow is not on QMainwindow but QDialog. (you can confirm this enable comment on widget.cpp)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes